mf/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.10 from Parser.y
-----------------------------------------------------------------------------

state 44 contains 4 reduce/reduce conflicts.
state 132 contains 2 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_happy -> Start                              (0)
	Start -> Program                                   (1)
	Program -> begin Procs Stats end                   (2)
	Procs -> Procs Proc                                (3)
	Procs ->                                           (4)
	Proc -> proc ident "(" ValArgs ResArg ")" is Stats end   (5)
	ValArgs -> val Args ","                            (6)
	ValArgs ->                                         (7)
	ResArg -> res Arg                                  (8)
	Args -> Args "," Arg                               (9)
	Args -> Arg                                        (10)
	Arg -> ident                                       (11)
	Stats -> Stats Stat                                (12)
	Stats -> Stat                                      (13)
	Stat -> if BExpr then Stat0 else Stat0             (14)
	Stat -> if BExpr then Stat0                        (15)
	Stat -> while BExpr do Stat0                       (16)
	Stat -> Stat0                                      (17)
	Stat0 -> skip ";"                                  (18)
	Stat0 -> ident ":=" AExpr ";"                      (19)
	Stat0 -> ident ":=" BExpr ";"                      (20)
	Stat0 -> "*" AExpr0 ":=" AExpr0 ";"                (21)
	Stat0 -> call ident "(" CallArgs "," ident ")" ";"   (22)
	Stat0 -> malloc "(" ident "," AExpr ")" ";"        (23)
	Stat0 -> free "(" AExpr0 ")" ";"                   (24)
	Stat0 -> "(" Stats ")"                             (25)
	Stat0 -> "{" Stats "}"                             (26)
	Stat0 -> continue ";"                              (27)
	Stat0 -> break ";"                                 (28)
	Stat0 -> tyint ident "[" AExpr "]" ";"             (29)
	Stat0 -> ident "[" AExpr "]" ":=" AExpr0 ";"       (30)
	CallArgs -> CallArgs "," EitherExpr                (31)
	CallArgs -> EitherExpr                             (32)
	CallArgs ->                                        (33)
	EitherExpr -> AExpr                                (34)
	EitherExpr -> BExpr                                (35)
	AExpr -> AExpr "+" AExpr                           (36)
	AExpr -> AExpr "-" AExpr                           (37)
	AExpr -> AExpr "*" AExpr                           (38)
	AExpr -> AExpr "/" AExpr                           (39)
	AExpr -> AExpr0                                    (40)
	AExpr0 -> int                                      (41)
	AExpr0 -> ident                                    (42)
	AExpr0 -> "(" AExpr ")"                            (43)
	AExpr0 -> "[" AExpr "]"                            (44)
	AExpr0 -> "*" AExpr0                               (45)
	AExpr0 -> ident "[" AExpr "]"                      (46)
	BExpr -> not BExpr                                 (47)
	BExpr -> BExpr and BExpr                           (48)
	BExpr -> BExpr or BExpr                            (49)
	BExpr -> BExpr "==" BExpr                          (50)
	BExpr -> AExpr "==" AExpr                          (51)
	BExpr -> AExpr "<" AExpr                           (52)
	BExpr -> AExpr ">" AExpr                           (53)
	BExpr -> AExpr ">=" AExpr                          (54)
	BExpr -> AExpr "<=" AExpr                          (55)
	BExpr -> BExpr0                                    (56)
	BExpr0 -> bool                                     (57)
	BExpr0 -> "(" BExpr ")"                            (58)
	BExpr0 -> ident                                    (59)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ident          { TIdent $$ }
	int            { TInt $$ }
	bool           { TBool $$ }
	if             { TIf }
	then           { TThen }
	else           { TElse }
	while          { TWhile }
	do             { TDo }
	skip           { TSkip }
	not            { TNot }
	":="           { TAssign }
	"+"            { TArithmeticOp "+" }
	"-"            { TArithmeticOp "-" }
	"*"            { TStar }
	"/"            { TArithmeticOp "/" }
	and            { TBoolOp "and" }
	or             { TBoolOp "or" }
	"=="           { TRelOp "==" }
	"<"            { TRelOp "<" }
	">"            { TRelOp ">" }
	"<="           { TRelOp "<=" }
	">="           { TRelOp ">=" }
	";"            { TSemicolon }
	"["            { TBlockOpen }
	"]"            { TBlockClose }
	"("            { TParenOpen }
	")"            { TParenClose }
	"{"            { TBraceOpen }
	"}"            { TBraceClose }
	begin          { TBegin }
	end            { TEnd }
	proc           { TProc }
	is             { TIs }
	val            { TVal }
	res            { TRes }
	call           { TCall }
	","            { TComma }
	malloc         { TMalloc }
	free           { TFree }
	continue       { TContinue }
	break          { TBreak }
	tyint          { TTyInt }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_happy    rule  0
	Start           rule  1
	Program         rule  2
	Procs           rules 3, 4
	Proc            rule  5
	ValArgs         rules 6, 7
	ResArg          rule  8
	Args            rules 9, 10
	Arg             rule  11
	Stats           rules 12, 13
	Stat            rules 14, 15, 16, 17
	Stat0           rules 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30
	CallArgs        rules 31, 32, 33
	EitherExpr      rules 34, 35
	AExpr           rules 36, 37, 38, 39, 40
	AExpr0          rules 41, 42, 43, 44, 45, 46
	BExpr           rules 47, 48, 49, 50, 51, 52, 53, 54, 55, 56
	BExpr0          rules 57, 58, 59

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	begin          shift, and enter state 3

	Start          goto state 4
	Program        goto state 2

State 1


	begin          shift, and enter state 3

	Program        goto state 2

State 2

	Start -> Program .                                  (rule 1)

	%eof           reduce using rule 1


State 3

	Program -> begin . Procs Stats end                  (rule 2)

	ident          reduce using rule 4
	if             reduce using rule 4
	while          reduce using rule 4
	skip           reduce using rule 4
	"*"            reduce using rule 4
	"("            reduce using rule 4
	"{"            reduce using rule 4
	proc           reduce using rule 4
	call           reduce using rule 4
	malloc         reduce using rule 4
	free           reduce using rule 4
	continue       reduce using rule 4
	break          reduce using rule 4
	tyint          reduce using rule 4

	Procs          goto state 5

State 4

	%start_happy -> Start .                             (rule 0)

	%eof           accept


State 5

	Program -> begin Procs . Stats end                  (rule 2)
	Procs -> Procs . Proc                               (rule 3)

	ident          shift, and enter state 10
	if             shift, and enter state 11
	while          shift, and enter state 12
	skip           shift, and enter state 13
	"*"            shift, and enter state 14
	"("            shift, and enter state 15
	"{"            shift, and enter state 16
	proc           shift, and enter state 17
	call           shift, and enter state 18
	malloc         shift, and enter state 19
	free           shift, and enter state 20
	continue       shift, and enter state 21
	break          shift, and enter state 22
	tyint          shift, and enter state 23

	Proc           goto state 6
	Stats          goto state 7
	Stat           goto state 8
	Stat0          goto state 9

State 6

	Procs -> Procs Proc .                               (rule 3)

	ident          reduce using rule 3
	if             reduce using rule 3
	while          reduce using rule 3
	skip           reduce using rule 3
	"*"            reduce using rule 3
	"("            reduce using rule 3
	"{"            reduce using rule 3
	proc           reduce using rule 3
	call           reduce using rule 3
	malloc         reduce using rule 3
	free           reduce using rule 3
	continue       reduce using rule 3
	break          reduce using rule 3
	tyint          reduce using rule 3


State 7

	Program -> begin Procs Stats . end                  (rule 2)
	Stats -> Stats . Stat                               (rule 12)

	ident          shift, and enter state 10
	if             shift, and enter state 11
	while          shift, and enter state 12
	skip           shift, and enter state 13
	"*"            shift, and enter state 14
	"("            shift, and enter state 15
	"{"            shift, and enter state 16
	end            shift, and enter state 52
	call           shift, and enter state 18
	malloc         shift, and enter state 19
	free           shift, and enter state 20
	continue       shift, and enter state 21
	break          shift, and enter state 22
	tyint          shift, and enter state 23

	Stat           goto state 51
	Stat0          goto state 9

State 8

	Stats -> Stat .                                     (rule 13)

	ident          reduce using rule 13
	if             reduce using rule 13
	while          reduce using rule 13
	skip           reduce using rule 13
	"*"            reduce using rule 13
	"("            reduce using rule 13
	")"            reduce using rule 13
	"{"            reduce using rule 13
	"}"            reduce using rule 13
	end            reduce using rule 13
	call           reduce using rule 13
	malloc         reduce using rule 13
	free           reduce using rule 13
	continue       reduce using rule 13
	break          reduce using rule 13
	tyint          reduce using rule 13


State 9

	Stat -> Stat0 .                                     (rule 17)

	ident          reduce using rule 17
	if             reduce using rule 17
	while          reduce using rule 17
	skip           reduce using rule 17
	"*"            reduce using rule 17
	"("            reduce using rule 17
	")"            reduce using rule 17
	"{"            reduce using rule 17
	"}"            reduce using rule 17
	end            reduce using rule 17
	call           reduce using rule 17
	malloc         reduce using rule 17
	free           reduce using rule 17
	continue       reduce using rule 17
	break          reduce using rule 17
	tyint          reduce using rule 17


State 10

	Stat0 -> ident . ":=" AExpr ";"                     (rule 19)
	Stat0 -> ident . ":=" BExpr ";"                     (rule 20)
	Stat0 -> ident . "[" AExpr "]" ":=" AExpr0 ";"      (rule 30)

	":="           shift, and enter state 49
	"["            shift, and enter state 50


State 11

	Stat -> if . BExpr then Stat0 else Stat0            (rule 14)
	Stat -> if . BExpr then Stat0                       (rule 15)

	ident          shift, and enter state 44
	int            shift, and enter state 35
	bool           shift, and enter state 45
	not            shift, and enter state 46
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 47

	AExpr          goto state 40
	AExpr0         goto state 41
	BExpr          goto state 48
	BExpr0         goto state 43

State 12

	Stat -> while . BExpr do Stat0                      (rule 16)

	ident          shift, and enter state 44
	int            shift, and enter state 35
	bool           shift, and enter state 45
	not            shift, and enter state 46
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 47

	AExpr          goto state 40
	AExpr0         goto state 41
	BExpr          goto state 42
	BExpr0         goto state 43

State 13

	Stat0 -> skip . ";"                                 (rule 18)

	";"            shift, and enter state 39


State 14

	Stat0 -> "*" . AExpr0 ":=" AExpr0 ";"               (rule 21)

	ident          shift, and enter state 34
	int            shift, and enter state 35
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 38

	AExpr0         goto state 33

State 15

	Stat0 -> "(" . Stats ")"                            (rule 25)

	ident          shift, and enter state 10
	if             shift, and enter state 11
	while          shift, and enter state 12
	skip           shift, and enter state 13
	"*"            shift, and enter state 14
	"("            shift, and enter state 15
	"{"            shift, and enter state 16
	call           shift, and enter state 18
	malloc         shift, and enter state 19
	free           shift, and enter state 20
	continue       shift, and enter state 21
	break          shift, and enter state 22
	tyint          shift, and enter state 23

	Stats          goto state 32
	Stat           goto state 8
	Stat0          goto state 9

State 16

	Stat0 -> "{" . Stats "}"                            (rule 26)

	ident          shift, and enter state 10
	if             shift, and enter state 11
	while          shift, and enter state 12
	skip           shift, and enter state 13
	"*"            shift, and enter state 14
	"("            shift, and enter state 15
	"{"            shift, and enter state 16
	call           shift, and enter state 18
	malloc         shift, and enter state 19
	free           shift, and enter state 20
	continue       shift, and enter state 21
	break          shift, and enter state 22
	tyint          shift, and enter state 23

	Stats          goto state 31
	Stat           goto state 8
	Stat0          goto state 9

State 17

	Proc -> proc . ident "(" ValArgs ResArg ")" is Stats end    (rule 5)

	ident          shift, and enter state 30


State 18

	Stat0 -> call . ident "(" CallArgs "," ident ")" ";"    (rule 22)

	ident          shift, and enter state 29


State 19

	Stat0 -> malloc . "(" ident "," AExpr ")" ";"       (rule 23)

	"("            shift, and enter state 28


State 20

	Stat0 -> free . "(" AExpr0 ")" ";"                  (rule 24)

	"("            shift, and enter state 27


State 21

	Stat0 -> continue . ";"                             (rule 27)

	";"            shift, and enter state 26


State 22

	Stat0 -> break . ";"                                (rule 28)

	";"            shift, and enter state 25


State 23

	Stat0 -> tyint . ident "[" AExpr "]" ";"            (rule 29)

	ident          shift, and enter state 24


State 24

	Stat0 -> tyint ident . "[" AExpr "]" ";"            (rule 29)

	"["            shift, and enter state 84


State 25

	Stat0 -> break ";" .                                (rule 28)

	ident          reduce using rule 28
	if             reduce using rule 28
	else           reduce using rule 28
	while          reduce using rule 28
	skip           reduce using rule 28
	"*"            reduce using rule 28
	"("            reduce using rule 28
	")"            reduce using rule 28
	"{"            reduce using rule 28
	"}"            reduce using rule 28
	end            reduce using rule 28
	call           reduce using rule 28
	malloc         reduce using rule 28
	free           reduce using rule 28
	continue       reduce using rule 28
	break          reduce using rule 28
	tyint          reduce using rule 28


State 26

	Stat0 -> continue ";" .                             (rule 27)

	ident          reduce using rule 27
	if             reduce using rule 27
	else           reduce using rule 27
	while          reduce using rule 27
	skip           reduce using rule 27
	"*"            reduce using rule 27
	"("            reduce using rule 27
	")"            reduce using rule 27
	"{"            reduce using rule 27
	"}"            reduce using rule 27
	end            reduce using rule 27
	call           reduce using rule 27
	malloc         reduce using rule 27
	free           reduce using rule 27
	continue       reduce using rule 27
	break          reduce using rule 27
	tyint          reduce using rule 27


State 27

	Stat0 -> free "(" . AExpr0 ")" ";"                  (rule 24)

	ident          shift, and enter state 34
	int            shift, and enter state 35
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 38

	AExpr0         goto state 83

State 28

	Stat0 -> malloc "(" . ident "," AExpr ")" ";"       (rule 23)

	ident          shift, and enter state 82


State 29

	Stat0 -> call ident . "(" CallArgs "," ident ")" ";"    (rule 22)

	"("            shift, and enter state 81


State 30

	Proc -> proc ident . "(" ValArgs ResArg ")" is Stats end    (rule 5)

	"("            shift, and enter state 80


State 31

	Stats -> Stats . Stat                               (rule 12)
	Stat0 -> "{" Stats . "}"                            (rule 26)

	ident          shift, and enter state 10
	if             shift, and enter state 11
	while          shift, and enter state 12
	skip           shift, and enter state 13
	"*"            shift, and enter state 14
	"("            shift, and enter state 15
	"{"            shift, and enter state 16
	"}"            shift, and enter state 79
	call           shift, and enter state 18
	malloc         shift, and enter state 19
	free           shift, and enter state 20
	continue       shift, and enter state 21
	break          shift, and enter state 22
	tyint          shift, and enter state 23

	Stat           goto state 51
	Stat0          goto state 9

State 32

	Stats -> Stats . Stat                               (rule 12)
	Stat0 -> "(" Stats . ")"                            (rule 25)

	ident          shift, and enter state 10
	if             shift, and enter state 11
	while          shift, and enter state 12
	skip           shift, and enter state 13
	"*"            shift, and enter state 14
	"("            shift, and enter state 15
	")"            shift, and enter state 78
	"{"            shift, and enter state 16
	call           shift, and enter state 18
	malloc         shift, and enter state 19
	free           shift, and enter state 20
	continue       shift, and enter state 21
	break          shift, and enter state 22
	tyint          shift, and enter state 23

	Stat           goto state 51
	Stat0          goto state 9

State 33

	Stat0 -> "*" AExpr0 . ":=" AExpr0 ";"               (rule 21)

	":="           shift, and enter state 77


State 34

	AExpr0 -> ident .                                   (rule 42)
	AExpr0 -> ident . "[" AExpr "]"                     (rule 46)

	then           reduce using rule 42
	do             reduce using rule 42
	":="           reduce using rule 42
	"+"            reduce using rule 42
	"-"            reduce using rule 42
	"*"            reduce using rule 42
	"/"            reduce using rule 42
	and            reduce using rule 42
	or             reduce using rule 42
	"=="           reduce using rule 42
	"<"            reduce using rule 42
	">"            reduce using rule 42
	"<="           reduce using rule 42
	">="           reduce using rule 42
	";"            reduce using rule 42
	"["            shift, and enter state 63
	"]"            reduce using rule 42
	")"            reduce using rule 42
	","            reduce using rule 42


State 35

	AExpr0 -> int .                                     (rule 41)

	then           reduce using rule 41
	do             reduce using rule 41
	":="           reduce using rule 41
	"+"            reduce using rule 41
	"-"            reduce using rule 41
	"*"            reduce using rule 41
	"/"            reduce using rule 41
	and            reduce using rule 41
	or             reduce using rule 41
	"=="           reduce using rule 41
	"<"            reduce using rule 41
	">"            reduce using rule 41
	"<="           reduce using rule 41
	">="           reduce using rule 41
	";"            reduce using rule 41
	"]"            reduce using rule 41
	")"            reduce using rule 41
	","            reduce using rule 41


State 36

	AExpr0 -> "*" . AExpr0                              (rule 45)

	ident          shift, and enter state 34
	int            shift, and enter state 35
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 38

	AExpr0         goto state 76

State 37

	AExpr0 -> "[" . AExpr "]"                           (rule 44)

	ident          shift, and enter state 34
	int            shift, and enter state 35
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 38

	AExpr          goto state 75
	AExpr0         goto state 41

State 38

	AExpr0 -> "(" . AExpr ")"                           (rule 43)

	ident          shift, and enter state 34
	int            shift, and enter state 35
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 38

	AExpr          goto state 74
	AExpr0         goto state 41

State 39

	Stat0 -> skip ";" .                                 (rule 18)

	ident          reduce using rule 18
	if             reduce using rule 18
	else           reduce using rule 18
	while          reduce using rule 18
	skip           reduce using rule 18
	"*"            reduce using rule 18
	"("            reduce using rule 18
	")"            reduce using rule 18
	"{"            reduce using rule 18
	"}"            reduce using rule 18
	end            reduce using rule 18
	call           reduce using rule 18
	malloc         reduce using rule 18
	free           reduce using rule 18
	continue       reduce using rule 18
	break          reduce using rule 18
	tyint          reduce using rule 18


State 40

	AExpr -> AExpr . "+" AExpr                          (rule 36)
	AExpr -> AExpr . "-" AExpr                          (rule 37)
	AExpr -> AExpr . "*" AExpr                          (rule 38)
	AExpr -> AExpr . "/" AExpr                          (rule 39)
	BExpr -> AExpr . "==" AExpr                         (rule 51)
	BExpr -> AExpr . "<" AExpr                          (rule 52)
	BExpr -> AExpr . ">" AExpr                          (rule 53)
	BExpr -> AExpr . ">=" AExpr                         (rule 54)
	BExpr -> AExpr . "<=" AExpr                         (rule 55)

	"+"            shift, and enter state 65
	"-"            shift, and enter state 66
	"*"            shift, and enter state 67
	"/"            shift, and enter state 68
	"=="           shift, and enter state 69
	"<"            shift, and enter state 70
	">"            shift, and enter state 71
	"<="           shift, and enter state 72
	">="           shift, and enter state 73


State 41

	AExpr -> AExpr0 .                                   (rule 40)

	then           reduce using rule 40
	do             reduce using rule 40
	"+"            reduce using rule 40
	"-"            reduce using rule 40
	"*"            reduce using rule 40
	"/"            reduce using rule 40
	and            reduce using rule 40
	or             reduce using rule 40
	"=="           reduce using rule 40
	"<"            reduce using rule 40
	">"            reduce using rule 40
	"<="           reduce using rule 40
	">="           reduce using rule 40
	";"            reduce using rule 40
	"]"            reduce using rule 40
	")"            reduce using rule 40
	","            reduce using rule 40


State 42

	Stat -> while BExpr . do Stat0                      (rule 16)
	BExpr -> BExpr . and BExpr                          (rule 48)
	BExpr -> BExpr . or BExpr                           (rule 49)
	BExpr -> BExpr . "==" BExpr                         (rule 50)

	do             shift, and enter state 64
	and            shift, and enter state 57
	or             shift, and enter state 58
	"=="           shift, and enter state 59


State 43

	BExpr -> BExpr0 .                                   (rule 56)

	then           reduce using rule 56
	do             reduce using rule 56
	and            reduce using rule 56
	or             reduce using rule 56
	"=="           reduce using rule 56
	";"            reduce using rule 56
	")"            reduce using rule 56
	","            reduce using rule 56


State 44

	AExpr0 -> ident .                                   (rule 42)
	AExpr0 -> ident . "[" AExpr "]"                     (rule 46)
	BExpr0 -> ident .                                   (rule 59)

	then           reduce using rule 59
	do             reduce using rule 59
	"+"            reduce using rule 42
	"-"            reduce using rule 42
	"*"            reduce using rule 42
	"/"            reduce using rule 42
	and            reduce using rule 59
	or             reduce using rule 59
	"=="           reduce using rule 59
			(reduce using rule 42)

	"<"            reduce using rule 42
	">"            reduce using rule 42
	"<="           reduce using rule 42
	">="           reduce using rule 42
	";"            reduce using rule 59
			(reduce using rule 42)

	"["            shift, and enter state 63
	")"            reduce using rule 59
			(reduce using rule 42)

	","            reduce using rule 59
			(reduce using rule 42)



State 45

	BExpr0 -> bool .                                    (rule 57)

	then           reduce using rule 57
	do             reduce using rule 57
	and            reduce using rule 57
	or             reduce using rule 57
	"=="           reduce using rule 57
	";"            reduce using rule 57
	")"            reduce using rule 57
	","            reduce using rule 57


State 46

	BExpr -> not . BExpr                                (rule 47)

	ident          shift, and enter state 44
	int            shift, and enter state 35
	bool           shift, and enter state 45
	not            shift, and enter state 46
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 47

	AExpr          goto state 40
	AExpr0         goto state 41
	BExpr          goto state 62
	BExpr0         goto state 43

State 47

	AExpr0 -> "(" . AExpr ")"                           (rule 43)
	BExpr0 -> "(" . BExpr ")"                           (rule 58)

	ident          shift, and enter state 44
	int            shift, and enter state 35
	bool           shift, and enter state 45
	not            shift, and enter state 46
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 47

	AExpr          goto state 60
	AExpr0         goto state 41
	BExpr          goto state 61
	BExpr0         goto state 43

State 48

	Stat -> if BExpr . then Stat0 else Stat0            (rule 14)
	Stat -> if BExpr . then Stat0                       (rule 15)
	BExpr -> BExpr . and BExpr                          (rule 48)
	BExpr -> BExpr . or BExpr                           (rule 49)
	BExpr -> BExpr . "==" BExpr                         (rule 50)

	then           shift, and enter state 56
	and            shift, and enter state 57
	or             shift, and enter state 58
	"=="           shift, and enter state 59


State 49

	Stat0 -> ident ":=" . AExpr ";"                     (rule 19)
	Stat0 -> ident ":=" . BExpr ";"                     (rule 20)

	ident          shift, and enter state 44
	int            shift, and enter state 35
	bool           shift, and enter state 45
	not            shift, and enter state 46
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 47

	AExpr          goto state 54
	AExpr0         goto state 41
	BExpr          goto state 55
	BExpr0         goto state 43

State 50

	Stat0 -> ident "[" . AExpr "]" ":=" AExpr0 ";"      (rule 30)

	ident          shift, and enter state 34
	int            shift, and enter state 35
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 38

	AExpr          goto state 53
	AExpr0         goto state 41

State 51

	Stats -> Stats Stat .                               (rule 12)

	ident          reduce using rule 12
	if             reduce using rule 12
	while          reduce using rule 12
	skip           reduce using rule 12
	"*"            reduce using rule 12
	"("            reduce using rule 12
	")"            reduce using rule 12
	"{"            reduce using rule 12
	"}"            reduce using rule 12
	end            reduce using rule 12
	call           reduce using rule 12
	malloc         reduce using rule 12
	free           reduce using rule 12
	continue       reduce using rule 12
	break          reduce using rule 12
	tyint          reduce using rule 12


State 52

	Program -> begin Procs Stats end .                  (rule 2)

	%eof           reduce using rule 2


State 53

	Stat0 -> ident "[" AExpr . "]" ":=" AExpr0 ";"      (rule 30)
	AExpr -> AExpr . "+" AExpr                          (rule 36)
	AExpr -> AExpr . "-" AExpr                          (rule 37)
	AExpr -> AExpr . "*" AExpr                          (rule 38)
	AExpr -> AExpr . "/" AExpr                          (rule 39)

	"+"            shift, and enter state 65
	"-"            shift, and enter state 66
	"*"            shift, and enter state 67
	"/"            shift, and enter state 68
	"]"            shift, and enter state 115


State 54

	Stat0 -> ident ":=" AExpr . ";"                     (rule 19)
	AExpr -> AExpr . "+" AExpr                          (rule 36)
	AExpr -> AExpr . "-" AExpr                          (rule 37)
	AExpr -> AExpr . "*" AExpr                          (rule 38)
	AExpr -> AExpr . "/" AExpr                          (rule 39)
	BExpr -> AExpr . "==" AExpr                         (rule 51)
	BExpr -> AExpr . "<" AExpr                          (rule 52)
	BExpr -> AExpr . ">" AExpr                          (rule 53)
	BExpr -> AExpr . ">=" AExpr                         (rule 54)
	BExpr -> AExpr . "<=" AExpr                         (rule 55)

	"+"            shift, and enter state 65
	"-"            shift, and enter state 66
	"*"            shift, and enter state 67
	"/"            shift, and enter state 68
	"=="           shift, and enter state 69
	"<"            shift, and enter state 70
	">"            shift, and enter state 71
	"<="           shift, and enter state 72
	">="           shift, and enter state 73
	";"            shift, and enter state 114


State 55

	Stat0 -> ident ":=" BExpr . ";"                     (rule 20)
	BExpr -> BExpr . and BExpr                          (rule 48)
	BExpr -> BExpr . or BExpr                           (rule 49)
	BExpr -> BExpr . "==" BExpr                         (rule 50)

	and            shift, and enter state 57
	or             shift, and enter state 58
	"=="           shift, and enter state 59
	";"            shift, and enter state 113


State 56

	Stat -> if BExpr then . Stat0 else Stat0            (rule 14)
	Stat -> if BExpr then . Stat0                       (rule 15)

	ident          shift, and enter state 10
	skip           shift, and enter state 13
	"*"            shift, and enter state 14
	"("            shift, and enter state 15
	"{"            shift, and enter state 16
	call           shift, and enter state 18
	malloc         shift, and enter state 19
	free           shift, and enter state 20
	continue       shift, and enter state 21
	break          shift, and enter state 22
	tyint          shift, and enter state 23

	Stat0          goto state 112

State 57

	BExpr -> BExpr and . BExpr                          (rule 48)

	ident          shift, and enter state 44
	int            shift, and enter state 35
	bool           shift, and enter state 45
	not            shift, and enter state 46
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 47

	AExpr          goto state 40
	AExpr0         goto state 41
	BExpr          goto state 111
	BExpr0         goto state 43

State 58

	BExpr -> BExpr or . BExpr                           (rule 49)

	ident          shift, and enter state 44
	int            shift, and enter state 35
	bool           shift, and enter state 45
	not            shift, and enter state 46
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 47

	AExpr          goto state 40
	AExpr0         goto state 41
	BExpr          goto state 110
	BExpr0         goto state 43

State 59

	BExpr -> BExpr "==" . BExpr                         (rule 50)

	ident          shift, and enter state 44
	int            shift, and enter state 35
	bool           shift, and enter state 45
	not            shift, and enter state 46
	"*"            shift, and enter state 36
	"["            shift, and enter state 37
	"("            shift, and enter state 47

	AExpr          goto state 40
	AExpr0         goto state 41
	BExpr          goto state 109
	BExpr0         goto state 43

State 60
